src/test/deca/context/valid/print-intFloatString.deca
{
    printlnx(2.5, "booba", 5);
}