src/test/deca/context/invalid/printMinusInvalid1.deca
{
print("sarah est pas bizarre" - 2);
}